<resources>
    <string name="app_name">Noticias</string>
    <string name="inputhintContraseña">Contraseña</string>
    <string name="inputhintUsuario">Usuario</string>
    <string name="btntxtRegistrarse">Registrarse</string>
    <string name="btntxtEntrar">Entrar</string>
    <string name="tituloRegistro">REGISTRO</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Login">EL NOTICIERO DE LAU</string>
    <string name="txtnoticias">NOTICIAS</string>
    <string name="add_noticia">addnoticia</string>
    <string name="card_input_url">Escribe la URL</string>
    <string name="requerido">Requerido</string>
    <string name="card_input_titulo">Escribe el título</string>
    <string name="btnSave">Guardar</string>
    <string name="card_input_Imagen">Añade la url de la imagen</string>
    <string name="opcional">Opcional</string>
    <string name="card_input_descripcion">Añade una descripción</string>
    <string name="card_input_Fecha">Añade la fecha</string>
    <string name="btntxtRegistro">Registrarse</string>
</resources>