<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.FormularioActivity"
    android:padding="30dp"
    android:orientation="vertical"
    android:showDividers="middle"
    android:divider="@drawable/empty_tall_divider"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilImagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_input_Imagen"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etImagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:backgroundTint="#e6ceff"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_input_url"
        app:endIconMode="clear_text"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:backgroundTint="#e6ceff"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_input_titulo"
        app:helperTextEnabled="false"
        app:helperTextTextColor="@color/helperTextColor"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:backgroundTint="#e6ceff"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_input_descripcion"
        app:helperTextEnabled="false"
        app:helperTextTextColor="@color/helperTextColor"
        app:endIconMode="clear_text"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:backgroundTint="#e6ceff"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_input_Fecha"
        app:helperTextEnabled="false"
        app:helperTextTextColor="@color/helperTextColor"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"


        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:backgroundTint="#e6ceff"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnguardar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnSave">


    </Button>






</LinearLayout>